<resources>
    <string name="app_name">Valet Parking</string>

    <!-- GENERAL -->
    <string name="code">Code</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>

    <!-- Buttons -->
    <string name="button_change">Change</string>
    <string name="button_verify">Verify</string>
    <string name="button_next">Next</string>
    <string name="button_back">Back</string>
    <string name="button_exit">Exit</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_register">Register</string>
    <string name="button_update">Update</string>
    <string name="button_search">Search</string>
    <string name="button_login">LOGIN</string>

    <!-- Alert dialog -->
    <string name="alert_title_register">Registration completed</string>
    <string name="alert_message_register">The registration has been successfully completed</string>

    <string name="alert_title_password">Password changed</string>
    <string name="alert_message_password">Your password has been changed</string>

    <string name="alert_title_code">Code sent</string>
    <string name="alert_message_code">The code has been sent</string>

    <string name="alert_title_token">Token sent</string>
    <string name="alert_message_token">The token has been sent</string>

    <string name="alert_title_exit">Exit notification</string>
    <string name="alert_message_exit">The vehicle is now ready to be picked up</string>

    <string name="alert_title_cancel">Successfully canceled</string>
    <string name="alert_message_cancel">Vehicle has been successfully canceled</string>

    <string name="alert_title_update">Successfully updated</string>
    <string name="alert_message_update">Register has been successfully updated</string>

    <string name="alert_id_title">Token id</string>
    <string name="alert_id_message">Insert the vehicle token id</string>
    <string name="alert_id_field">Token</string>


    <string name="alert_button_accept">Accept</string>

    <!-- Option menu -->
    <string name="option_profile">Profile</string>
    <string name="option_settings">Settings</string>
    <string name="option_close_tickets">Close ticket</string>
    <string name="option_operators">Operators</string>
    <string name="option_logout">Logout</string>
    <string name="option_about">About</string>
    <!-- GENERAL -->


    <!-- LOGIN -->
    <!-- Main menu -->
    <string name="login_title">VALET PARKING</string>
    <string name="login_info_title">Login and start managing your vehicles</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_create_account">Create account</string>

    <!-- Verify username -->
    <string name="verify_title">VERIFY USERNAME</string>
    <string name="verify_message">Please enter your username</string>


    <!-- Forgot password -->
    <string name="forgot_title">FORGOT PASSWORD</string>
    <string name="forgot_code_sms">SMS code</string>
    <string name="forgot_code_email">Email code</string>
    <string name="forgot_code_sent">Send me a new code</string>
    <string name="forgot_message">A code will be sent to you by SMS or email to validate the authentication</string>

    <!-- Change password -->
    <string name="change_title">CHANGE PASSWORD</string>
    <string name="change_message">Please enter a new password</string>

    <!-- Create account -->
    <string name="create_account_title">CREATE ACCOUNT</string>
    <string name="create_account_subtitle_personal_info">Personal info</string>
    <string name="create_account_name">Full name</string>
    <string name="create_account_subtitle_user">User</string>
    <string name="create_account_username">Username</string>
    <string name="create_account_password">Password</string>
    <string name="create_account_confirm_password">Confirm password</string>

    <!-- About the place -->
    <string name="about_title">ABOUT THE PLACE</string>
    <string name="about_subtitle_information">Information</string>
    <string name="about_name">Name of the place</string>
    <string name="about_type">Type of the place</string>
    <string name="about_description">Description</string>

    <string name="about_subtitle_contacts">Contacts</string>
    <string name="about_facebook">Facebook</string>
    <string name="about_instagram">Instagram</string>
    <string name="about_twitter">Twitter</string>

    <!-- Location -->
    <string name="location_title">LOCATION</string>
    <string name="location_search">Enter the location</string>
    <!-- LOGIN -->


    <!-- Checks-->
    <string name="check_in_title">CHECK IN</string>
    <string name="check_out_title">CHECK OUT</string>
    <string name="check_subtitle_vehicle">Vehicle</string>
    <string name="check_brand">Brand</string>
    <string name="check_year">Year</string>
    <string name="check_model">Model</string>
    <string name="check_color">Color</string>
    <string name="check_plate">Plate</string>
    <string name="check_details">Details</string>

    <string name="check_subtitle_driver">Driver</string>
    <string name="check_subtitle_location">Location</string>
    <string name="check_key">Key location</string>
    <string name="check_vehicle">Vehicle location</string>

    <!-- Open & close ticket -->
    <string name="tickets_title">TICKETS</string>
    <string name="open_ticket_title">OPEN TICKET</string>
    <string name="close_ticket_title">CLOSE TICKET</string>
    <string name="ticket_list">List of vehicles</string>
    <string name="ticket_list_closed">List of vehicles closed</string>
    <string name="ticket_search">Enter vehicle detail</string>

    <string name="ticket_filter_title">Search filter</string>
    <string name="ticket_filter_ticket">Tickets</string>
    <string name="ticket_filter_operators">Operators</string>
    <string name="ticket_filter_date">Date</string>

    <!-- Cancel vehicle -->
    <string name="cancel_vehicle_title">CANCEL VEHICLE</string>

    <string name="cancel_alert_title">Cancel register</string>
    <string name="cancel_alert_note">Insert the cancellation note</string>

    <!-- Operator account -->
    <string name="create_account_operator">OPERATOR ACCOUNT</string>
    <string name="create_account_subtitle_operator">Operator</string>

    <!-- Operator profile -->
    <string name="operator_profile_title">PROFILE</string>


    <!-- DATA -->
    <!-- Brands -->
    <string name="table_operators">Operators</string>

    <!-- Years -->
    <string name="table_hours">Hours</string>

    <!-- com.example.valetparking.Database.Models -->
    <!-- Toyota -->
    <string name="table_vehicles">Vehicles</string>

    <!-- Honda -->
    <string name="table_name">Name</string>

    <!-- Colors -->
    <string name="table_hour_in">Entry</string>

    <!-- Codes -->
    <string name="table_hour_out">Exit</string>

    <!-- Types of place -->
    <string name="table_vehicles_in">Entered</string>

    <!-- Filters -->
    <string name="table_vehicles_out">Retired</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- TableLayout -->
    <string-array name="array_brands">
        <item>Toyota</item>
        <item>Honda</item>
    </string-array>
    <string-array name="array_years">
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
    </string-array>
    <string-array name="array_models_toyota">
        <item>Etios</item>
        <item>Yaris</item>
        <item>Corolla</item>
        <item>Hillux</item>
    </string-array>

    <string-array name="array_models_honda">
        <item>Accord</item>
        <item>Jazz</item>
    </string-array>
    <string-array name="array_colors">

        <!-- Codes -->
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string-array name="array_codes">
        <item>+1</item>
        <item>+58</item>
    </string-array>
    <string-array name="array_places">
        <item>Hospital</item>
        <item>Mall</item>
        <item>Restaurant</item>
    </string-array>
    <string-array name="array_filter_select">
        <item>Brand</item>
        <item>Year</item>
        <item>Color</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="array_filter_tickets">
        <item>Opened</item>
        <item>Closed</item>
        <item>Canceled</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="array_filter_operators">
        <item>Joel</item>
        <item>Gabriel</item>
        <item>Jesus</item>
        <item>María</item>
        <item>Sofía</item>
    </string-array>

</resources>
