<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.valetparking.Operator.CheckOutFragment">

    <!-- ScrollView -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <!-- Vehicle -->
            <TextView
                android:id="@+id/check_out_subtitle_vehicle"
                style="@style/subtitle"
                android:text="@string/check_subtitle_vehicle" />
            <TextView style="@style/line_down"/>

            <!-- First linear horizontal-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Brand -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/check_out_brand"
                    style="@style/text_input_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="2.5dp"
                    android:hint="@string/check_brand">

                    <AutoCompleteTextView
                        android:id="@+id/check_out_brand_edit"
                        style="@style/auto_complete_none" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Year -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/check_out_year"
                    style="@style/text_input_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="2.5dp"
                    android:hint="@string/check_year">

                    <AutoCompleteTextView
                        android:id="@+id/check_out_year_edit"
                        style="@style/auto_complete_none" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Second linear horizontal-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Model -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/check_out_model"
                    style="@style/text_input_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="2.5dp"
                    android:hint="@string/check_model">

                    <AutoCompleteTextView
                        android:id="@+id/check_out_model_edit"
                        style="@style/auto_complete_none" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Color -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/check_out_color"
                    style="@style/text_input_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="2.5dp"
                    android:hint="@string/check_color">

                    <AutoCompleteTextView
                        android:id="@+id/check_out_color_edit"
                        style="@style/auto_complete_none" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Plate -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/check_out_plate"
                style="@style/text_input_layout"
                android:hint="@string/check_plate" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/check_out_plate_edit"
                    style="@style/auto_complete_none" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Driver -->
            <TextView
                android:id="@+id/check_out_subtitle_owner"
                style="@style/subtitle"
                android:text="@string/check_subtitle_driver" />
            <TextView style="@style/line_down" />

            <!-- Code & Phone -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Code -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/check_out_code"
                    style="@style/text_input_layout"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/code">

                    <AutoCompleteTextView
                        android:id="@+id/check_out_code_edit"
                        style="@style/auto_complete_none" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Phone number -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/check_out_telephone"
                    style="@style/text_input_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/check_out_code"
                    android:layout_marginLeft="5dp"
                    app:startIconDrawable="@drawable/icon__telephone"
                    android:hint="@string/phone_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/check_out_telephone_edit"
                        style="@style/auto_complete_none" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/check_out_email"
                style="@style/text_input_layout"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/icon__email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/check_out_email_edit"
                    style="@style/auto_complete_none" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Location -->
            <TextView
                android:id="@+id/check_out_subtitle_location"
                style="@style/subtitle"
                android:text="@string/check_subtitle_location" />
            <TextView style="@style/line_down" />

            <!-- Key location -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/check_out_key"
                style="@style/text_input_layout"
                android:hint="@string/check_key"
                app:startIconDrawable="@drawable/icon__key">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/check_out_key_edit"
                    style="@style/auto_complete_none"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Vehicle location -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/check_out_vehicle"
                style="@style/text_input_layout"
                android:hint="@string/check_vehicle"
                app:helperTextTextColor="@color/helper_text_red"
                app:startIconDrawable="@drawable/icon__car">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/check_out_vehicle_edit"
                    style="@style/auto_complete_none" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Button -->
            <Button
                android:id="@+id/check_out_button"
                style="@style/button"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/button_exit"/>
        </LinearLayout>


    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/check_out_token"
        style="@style/Widget.App.FloatingActionButton"
        app:srcCompat="@drawable/icon__search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp" />

</FrameLayout>